--- a/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
+++ b/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataAccessor.cs" />
+    <Compile Include="DataTableCache.cs" />
     <Compile Include="HomePage\HomePageForm.cs">
       <SubType>Form</SubType>
     </Compile>
