--- a/RobinhoodDesktop/RobinhoodDesktop/packages.config
+++ b/RobinhoodDesktop/RobinhoodDesktop/packages.config
@@ -2,28 +2,5 @@
 <packages>
   <package id="CS-Script" version="3.28.7" targetFramework="net461" />
   <package id="CS-Script.bin" version="3.28.7" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Common" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.CSharp.Scripting" version="2.0.0" targetFramework="net461" />
-  <package id="Microsoft.CodeAnalysis.Scripting.Common" version="2.0.0" targetFramework="net461" />
-  <package id="System.AppContext" version="4.3.0" targetFramework="net461" />
-  <package id="System.Collections" version="4.3.0" targetFramework="net461" />
-  <package id="System.Collections.Immutable" version="1.3.1" targetFramework="net461" />
-  <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.StackTrace" version="4.3.0" targetFramework="net461" />
-  <package id="System.Diagnostics.Tools" version="4.3.0" targetFramework="net461" />
-  <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
-  <package id="System.IO" version="4.3.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem" version="4.3.0" targetFramework="net461" />
-  <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq" version="4.3.0" targetFramework="net461" />
-  <package id="System.Linq.Expressions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection" version="4.3.0" targetFramework="net461" />
-  <package id="System.Reflection.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Resources.ResourceManager" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" />
-  <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading" version="4.3.0" targetFramework="net461" />
-  <package id="System.Threading.Tasks" version="4.3.0" targetFramework="net461" />
+  <package id="NetSerializer" version="4.1.0" targetFramework="net461" />
 </packages>
