--- a/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
+++ b/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
@@ -174,6 +174,9 @@
     <Compile Include="Scripting.evaluator.cs" />
     <Compile Include="Scripting.Extensions.cs" />
     <Compile Include="Scripting.native.cs" />
+    <Content Include="Content\GUI\Button_Live.png">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="Script\Data\MovingAverage.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
@@ -185,6 +188,9 @@
     <Compile Include="Script\StockDataSetDerived.cs" />
     <Compile Include="Script\StockSession.cs" />
     <EmbeddedResource Include="Script\StockSessionScript.cs" />
+    <Content Include="Script\StockSessionLiveScript.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="SearchList.cs">
       <SubType>Component</SubType>
     </Compile>
