--- a/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
+++ b/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
@@ -187,6 +187,9 @@
     <Content Include="Script\Decision\PriceEvaluator.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="Script\Data\TimeToChange.cs">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Compile Include="Script\StockDataBase.cs" />
     <Compile Include="Script\StockDataSetDerived.cs" />
     <EmbeddedResource Include="Script\StockProcessor.cs" />
