--- a/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
+++ b/RobinhoodDesktop/RobinhoodDesktop/RobinhoodDesktop.csproj
@@ -97,10 +97,6 @@
       <HintPath>..\packages\NetSerializer.4.1.0\lib\net45\NetSerializer.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="NPlot, Version=0.9.10.1, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>NPlot\NPlot.dll</HintPath>
-    </Reference>
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
     <Reference Include="System" />
@@ -126,6 +122,9 @@
     <Reference Include="System.IO.FileSystem.Primitives, Version=4.0.2.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.IO.FileSystem.Primitives.4.3.0\lib\net46\System.IO.FileSystem.Primitives.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="System.ValueTuple, Version=4.0.3.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\System.ValueTuple.4.5.0\lib\net461\System.ValueTuple.dll</HintPath>
     </Reference>
     <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
@@ -170,7 +169,18 @@
     <Compile Include="HomePage\HomePageForm.Designer.cs">
       <DependentUpon>HomePageForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="LogInScreen.cs" />
+    <Compile Include="Login\LogIn.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login\LogIn.Designer.cs">
+      <DependentUpon>LogIn.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Login\SMS_Code.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Login\SMS_Code.Designer.cs">
+      <DependentUpon>SMS_Code.cs</DependentUpon>
+    </Compile>
     <Compile Include="MenuBar.cs" />
     <Compile Include="RobinhoodInterface.cs" />
     <Compile Include="Scripting.evaluator.cs" />
@@ -182,6 +192,9 @@
     <Content Include="Script\Data\MovingAverage.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <EmbeddedResource Include="Login\LogIn.resx">
+      <DependentUpon>LogIn.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Script\StockDataScript.cs" />
     <Content Include="Script\Action\StockAction.cs">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
