--- a/RobinhoodDesktop/RobinhoodDesktop/packages.config
+++ b/RobinhoodDesktop/RobinhoodDesktop/packages.config
@@ -3,4 +3,5 @@
   <package id="CS-Script" version="3.28.7" targetFramework="net461" />
   <package id="CS-Script.bin" version="3.28.7" targetFramework="net461" />
   <package id="NetSerializer" version="4.1.0" targetFramework="net461" />
+  <package id="System.ValueTuple" version="4.5.0" targetFramework="net461" />
 </packages>
