--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "RobinhoodDesktop/RobinhoodDesktop/RobinhoodNet"]
 	path = RobinhoodDesktop/RobinhoodDesktop/RobinhoodNet
 	url = https://github.com/xethm55/RobinhoodNet.git
+[submodule "RobinhoodDesktop/RobinhoodDesktop/NPlot"]
+	path = RobinhoodDesktop/RobinhoodDesktop/NPlot
+	url = https://github.com/Terohnon/NPlot.git
