Fix issue in stock chart range determination

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ RobinhoodDesktop/.vs/**
 RobinhoodDesktop/packages/**
 RobinhoodDesktop/RobinhoodDesktop/bin/**
 RobinhoodDesktop/RobinhoodDesktop/obj/**
+RobinhoodDesktop/RobinhoodDesktop/StockData/**
